Adding the last two activities for each of the buttons\

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="select_dice">Please select the dice you would like to roll</string>
     <string name="di_number_questions">How many dice do you wanna roll?</string>
     <string name="roll_button">Roll</string>
+    <string name="reset_button">Reset</string>
 </resources>
